--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <!-- Existing head content -->
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
+    <!-- Open Graph Protocol (OGP) metadata for cover photo -->
+    <meta property="og:title" content="TEDxARISTIDE DEMETRIADE" />
+    <meta property="og:description" content="TEDxARISTIDE DEMETRIADE" />
+    <meta property="og:image" content="./resources/pictures/poza profil.png" /> <!-- Updated path to your cover image -->
+    <!--<meta property="og:url" content="URL_of_your_website" />  Replace with your website's URL -->
+    <!--<meta property="og:type" content="website" />-->
+</head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>TEDxARISTIDE DEMETRIADE</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
